--- a/style/index.css
+++ b/style/index.css
@@ -16,12 +16,12 @@
 	top: 430px;
 }
 .lb_jy li{
-	width: 30px;
-	height: 30px;
+	width: 20px;
+	height: 20px;
 	border-radius: 50%;
 	font-size:16px ;
 	color: #FFFFFF;
-	line-height: 30px;
+	line-height: 20px;
 	text-align: center;
 	cursor: pointer;
 	border: 1px solid #FFFFFF;
@@ -57,47 +57,12 @@
 #tp_cb img{
 	opacity: .7;
 }
-.nav_list_sub{
-	position: absolute;
-	left: 0px;
-	z-index: 2222;
-}
-.nav_list_sub li{
-	width: 145px;
-	height: 47px;
-	background: rgba(204,2,16,.9);
-	padding: 0 20px;
-}
 
-
-.nav_list_sub li em{
-	font-family: iconfont;
-	color: #f4cfd2;
-	line-height: 47px;
-	font-size: 20px;
-}
-.nav_list_sub li span{
-	font-family: iconfont;
-	color: #d6525e;
-	font-size: 10px;
-	font-weight: 900;
-	line-height: 47px;
-}
-.nav_llist_sub li a{
-	line-height: 47px;
-	font-size: 16px;
-}
-.nav_list_sub li span{
-	float: right;
-}
 #Carousel_bz{
 	width: 100%;
 	height: 45px;
-/*	background: red;*/
 	border-bottom: 1px solid #eaeaea;
 	margin: 0 auto;
-	/*position: absolute;
-	top: 470px;*/
 	margin-top: 470px;
 }
 #Carousel_bz span{
@@ -299,4 +264,274 @@
 }
 .yjrm_right ul li a div:nth-of-type(1){
 	background: #1e9ed7;
+}
+.dztj{
+	margin: 0 auto;
+width: 1200px;
+}
+.dztj_head{
+	
+	height: 58px;
+	
+}
+.dztj_head span{
+	display: block;
+	font-size: 20px;
+	color: #333333;
+	line-height: 58px;
+	float: left;
+}
+.dztj_head div{
+	font-family: iconfont;
+	width: 33px;
+	height: 23px;
+	background: #f5f5f5;
+	font-size: 12px;
+	line-height: 23px;
+	border: 1px solid #e0e0e0;
+	color: #adaeb0;
+	text-align: center;
+	float: right;
+	cursor: pointer;
+}
+.dztj_box{
+	width: 1200px;
+	float: left;
+	overflow: hidden;
+	margin-bottom: 25px;
+}
+.dztj_box ul{
+	width: 2400px;
+}
+.dztj_box ul li{
+	float: left;
+	width: 225px;
+	height: 315px;
+	background: #FFFFFF;
+}
+.dztj_box ul li a{
+	width: 100%;
+	display: block;
+}
+.dztj_box ul li a img{
+	display: block;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+}
+.dztj_box_bt{
+	font-size: 12px;
+	color: #333333;
+	text-align: center;
+	margin-top: 18px;
+	margin-bottom: 14px;
+}
+.dztj_box_jg{
+	font-size: 12px;
+	color: #ff2c00;
+	text-align: center;
+}
+.dztj_box_rs{
+	font-size: 12px;
+	color: #757575;
+	text-align: center;
+	margin-top: 17px;
+}
+.dztj_li{
+	margin-right: 15px;
+}
+.a{
+	transform: translateX(-1200px);
+	transition: all 1s; 
+}
+.b{
+	transform: translateX(0px);
+	transition: all 1s; 
+}
+
+.jyrp_box{
+	width: 100%;
+	float: left;
+	margin-bottom: 25px;
+}
+.jyrp_box ul li{
+	background: #FFFFFF;
+	float: left;
+	width: 282px;
+	height: 392px;
+	margin-right: 18px;
+}
+.jyrp_box ul li a img{
+	display: block;
+	width: 100%;
+}
+.jyrp_box ul li a p{
+	width: 215px;
+	font-size: 12px;
+	color: #333333;
+	margin-top: 28px;
+	margin-left: 30px;
+	line-height: 23px;
+}
+.jyrp_box ul li a span:nth-of-type(1){
+	display: block;
+	font-size: 11px;
+	color: #b0b0b0;
+	margin-left: 30px;
+	margin-top: 15px;
+}
+.jyrp_box ul li a span:nth-of-type(2){
+	display: block;
+	width: 130px;
+	font-size: 12px;
+	color: #333333;
+	margin-left: 30px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	float: left;
+	line-height: 18px;
+	margin-top: 10px;
+}
+.jyrp_box ul li a span:nth-of-type(3){
+	display: block;
+	float: left;
+	height: 18px;
+	font-size: 12px;
+	color: #ff6757;
+	padding: 0 10px;
+	border-left: 2px solid #a2a2a2;
+	margin-top: 10px;
+}
+
+
+.sp_box{
+	width: 100%;
+	float: left;
+}
+.sp_box ul li{
+	float: left;
+	width: 282px;
+	height: 258px;
+	background: #FFFFFF;
+	margin-right: 18px;
+}
+.sp_box ul li a{
+	display: block;
+	width: 100%;
+	position: relative;
+}
+.sp_box ul li a span{
+	display: block;
+	margin-top: 28px;
+	text-align: center;
+	font-size: 16px;
+	color: #333333;
+}
+.sp_box ul li a div{
+	position: absolute;
+	top: 140px;
+	left: 20px;
+	width: 35px;
+	height: 24px;
+	border: 2px solid #FFFFFF;
+	border-radius: 12px;
+	text-align: center;
+	line-height: 24px;
+	color: #FFFFFF;
+}
+.sp_box ul li a:hover .sp_sj{
+	background: #ff6700;
+	border-color: #ff6700;
+}
+
+
+
+.de{
+	transform: translateY(-5px);
+	transition: all .5s;
+	box-shadow: -5px 5px 10px #CCCCCC; 
+}
+.de2{
+	transform: translateY(0px);
+	transition: all 1s;
+}
+
+
+
+#home_top{
+	width: 100%;
+	height: 50px;
+	background: rgba(217,14,63,.7);
+	position: fixed;
+	top: 0;
+	z-index: 33;
+	display: none;
+}
+.sytb{
+	width: 1200px;
+	height: 50px;
+	margin: 0 auto;
+	
+}
+.sytb>form{
+	position: relative;
+}
+.sytb a img{
+	display: block;
+	float: left;
+}
+.sytb_txt{
+	float: left;
+	font-size: 16px;
+	width: 344px;
+	height: 33px;
+	border: 3px solid #c40000;
+	text-indent: 20px;
+	margin-top: 10px;
+	margin-left: 50px;
+	outline:medium
+}
+.sytb_btn{
+	float: left;
+	width: 86px;
+	height: 39px;
+	background: #c40000;
+	border: none;
+	font-size: 16px;
+	color: #FFFFFF;
+	line-height: 40px;
+	text-align: center;
+	margin-top: 10px;
+	outline:medium
+}
+
+#sousuo2{
+	width: 350px;
+	position: absolute;
+	z-index: 1000;
+	top: 50px;
+	left: 390px;
+}
+#sousuo2>li{
+	background: #FFFFFF;
+	border-bottom: 1px dashed #999999;
+}
+#sousuo2>li>a{
+	margin-left: 10px;
+	width: 348px;
+	height: 30px;
+	font-size: 12px;
+	line-height:30px;
+	display: block;
+}
+#seek_txt2{
+	float: left;
+	width: 344px;
+	height: 33px;
+	font-size: 16px;
+	text-indent: 20px;
+	border: 3px solid #c40000;
+	outline:medium;
+	position: relative;
 }
