--- a/style/detail.css
+++ b/style/detail.css
@@ -17,17 +17,19 @@
 	cursor: move;
 }
 #zoom{
-	display: none;
-    width: 210px;
-    height: 210px;
-    background: yellow;
-    opacity: .5;
+    opacity: .7;
     position: absolute;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*background-color: cornflowerblue;*/
+    display: none;
 }
 .detail_img{
 	width:420px;
 	height: 420px;
-	margin-left: 25px;
+	/*margin-left: 25px;*/
 	margin-right: 30px;
 	border: 1px solid #CCCCCC;
 }
